...
          shadowOpacity: 0.15,
          shadowOffset: { width: 0, height: 2 },
          shadowRadius: 10,
        }}
      >
        <Text style={{ flex: 1, fontSize: 16 }}>Dialog</Text>
        <Button title="Close" onPress={() => props.navigation.goBack()} />
      </View>
    </View>
  );
};

export default createStackNavigator(
...
