appId: ${APP_ID}
name: Drawer View - Front Left
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: drawer-view?type=front&position=left
      TEXT: 'Open drawer'
- assertVisible:
    text: 'Change type (front)'
- assertVisible:
    text: 'Change position (left)'
- swipe:
    direction: RIGHT
    duration: 300
- extendedWaitUntil:
    visible:
      text: 'Close'
    timeout: 1000
- tapOn:
    text: 'Close'
- extendedWaitUntil:
    visible:
      text: 'Open drawer'
    timeout: 1000
- tapOn:
    text: 'Open drawer'
- extendedWaitUntil:
    visible:
      text: 'Close'
    timeout: 1000
- tapOn:
    text: 'Close'
- extendedWaitUntil:
    visible:
      text: 'Open drawer'
    timeout: 1000
